# otus-2025-cpp-basics

./: .gitignore  README.md
hw02/: CMakeLists.txt  hello_world.cpp  move_me_out.cpp  move_me_out.h
hw03/: .gitignore  CMakeLists.txt  check_value.cpp  game_process.cpp  game_process.hpp  random_value.cpp  random_value.hpp  read_user_name.cpp  read_user_name.hpp  save_print_result.cpp  save_print_result.hpp
hw04/: CMakeLists.txt
